--- a/systemd/p25parrot.service
+++ b/systemd/p25parrot.service
@@ -1,7 +1,10 @@
 [Unit]
 Description=P25 Parrot Service
 # Description=Place this file in /lib/systemd/system
-# Description=N4IRS 04/30/2020
+# Description=N4IRS 04/20/2018
+
+After=netcheck.service
+Requires=netcheck.service
 
 [Service]
 Type=simple
