--- a/systemd/p25parrot.service
+++ b/systemd/p25parrot.service
@@ -4,7 +4,6 @@ Description=P25 Parrot Service
 # Description=N4IRS 04/20/2018
 
 After=netcheck.service
-Requires=netcheck.service
 
 [Service]
 Type=simple
@@ -12,6 +11,7 @@ Restart=always
 RestartSec=3
 StandardOutput=null
 WorkingDirectory=/opt/P25Parrot
+ExecStartPre = /bin/sh -c 'echo "Starting P25Parrot: [`date +%%T.%%3N`]" >> /var/log/netcheck'
 ExecStart=/opt/P25Parrot/P25Parrot 42011
 ExecReload=/bin/kill -HUP $MAINPID
 KillMode=process
